# SmartScheduling

CEWs/February/ideal/MPM/: 2022-2-14-0.txt  2022-2-15-0.txt  2022-2-16-0.txt  2022-2-17-0.txt  2022-2-18-0.txt  2022-2-19-0.txt  2022-2-20-0.txt  2022-2-21-0.txt  2022-2-22-0.txt  2022-2-23-0.txt  2022-2-25-0.txt  2022-2-26-0.txt  2022-2-27-0.txt
CEWs/February/ideal/SPM/: 2022-2-14-0.txt  2022-2-14-18.txt  2022-2-14-6.txt  2022-2-15-0.txt  2022-2-15-18.txt  2022-2-16-0.txt  2022-2-16-12.txt  2022-2-16-18.txt  2022-2-16-6.txt  2022-2-18-0.txt  2022-2-18-12.txt  2022-2-20-0.txt  2022-2-20-12.txt  2022-2-20-6.txt  2022-2-21-0.txt  2022-2-21-18.txt  2022-2-22-0.txt  2022-2-22-6.txt  2022-2-23-0.txt  2022-2-23-12.txt  2022-2-23-6.txt  2022-2-24-0.txt  2022-2-25-0.txt  2022-2-26-0.txt  2022-2-26-12.txt  2022-2-26-18.txt  2022-2-26-6.txt  2022-2-27-0.txt  2022-2-27-12.txt  2022-2-27-18.txt
CEWs/February/predicted/MPM/: 2022-2-14-6.txt  2022-2-15-0.txt  2022-2-16-0.txt  2022-2-16-12.txt  2022-2-18-0.txt  2022-2-18-12.txt  (+11 more)
scheduler/: example_scheduler.sh  scheduler_experiment.sh
scheduler/charging_station_locations/12km/: cork_charging_stations.txt  details.txt
scheduler/charging_station_locations/15km/: galway_charging_stations.txt
scheduler/charging_station_locations/Inf-A/: galway_charging_stations.txt  limerick_charging_stations.txt
scheduler/charging_station_locations/Inf-B/: cork_charging_stations.txt  details.txt  limerick_charging_stations.txt
scheduler/code/: CMakeLists.txt  DataStructures.cpp  DataStructures.h  FileReader.cpp  FileReader.h  Output.cpp  Output.h  Parser.cpp  Parser.h  Utils.cpp  Utils.h  cmake_directories.txt  scheduler.cpp
scheduler/code/backup/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  cplex_test.sln  cplex_test.vcxproj.filters  test.vcxproj
scheduler/code/cmake/: FindCPLEX.cmake
scheduler/code/release-build/: CMakeCache.txt  Makefile  cmake_install.cmake
(+24 files in other folders)
